@@ -1,3 +1,8 @@
+2006-04-15  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/CustomAttribute.cs:
+		Fix handling of types.
+
 2006-04-11  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/FieldDefinition.cs
